# portfolio-backend

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  blog.py  certifications.py  health.py  projects.py  uploads.py
app/core/: config.py  security.py
app/models/: __init__.py  content.py
app/schemas/: content.py
app/services/: storage.py
portfolio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: seed.py
tests/: conftest.py  test_api.py
