[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for the portfolio CI/CD demo platform"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.2",
    "boto3==1.34.144",
    "fastapi==0.111.1",
    "psycopg[binary]==3.2.1",
    "pydantic-settings==2.3.4",
    "PyJWT==2.8.0",
    "python-multipart==0.0.9",
    "SQLAlchemy==2.0.31",
    "uvicorn[standard]==0.30.1"
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.0",
    "pip-audit==2.7.3",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "ruff==0.5.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
